--- a/src/ntm_profiler_webserver/templates/pages/still-waiting.html
+++ b/src/ntm_profiler_webserver/templates/pages/still-waiting.html
@@ -19,7 +19,7 @@
                 <button class="nav-link" id="species-tab" data-bs-toggle="tab" data-bs-target="#species-tab-pane" type="button" role="tab" aria-controls="species-tab-pane" aria-selected="false" disabled>Species</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="clustering-tab" data-bs-toggle="tab" data-bs-target="#clustering-tab-pane" type="button" role="tab" aria-controls="clustering-tab-pane" aria-selected="false" disabled>Clustering</button>
+                <button class="nav-link" id="clustering-tab" data-bs-toggle="tab" data-bs-target="#clustering-tab-pane" type="button" role="tab" aria-controls="clustering-tab-pane" aria-selected="false" disabled>Subspecies</button>
             </li>
             <li class="nav-item" role="presentation">
               <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false" disabled>Drug resistance</button>
