--- a/src/ntm_profiler_webserver/templates/pages/analysis_id.html
+++ b/src/ntm_profiler_webserver/templates/pages/analysis_id.html
@@ -6,7 +6,7 @@
 <div class="row justify-content-center">
     <div class="col-md-8">
 
-    {{ macros.generic_table(runs,{'link':'Run ID', 'files':'Files'},"Submitted runs",True) }}
+      {{ macros.generic_table(runs,{'link':'Run ID', 'files':'Files', 'status':'Status'},"Submitted runs",True) }}
     </div>
 </div>
 
