--- a/src/ntm_profiler_webserver/templates/pages/index.html
+++ b/src/ntm_profiler_webserver/templates/pages/index.html
@@ -19,7 +19,7 @@
 		<div class="col-md-10 pt-4">
 			<div class="p-4">
 				Welcome to the webserver of NTM-Profiler - a pipeline which allows users
-				to analyse <i>M. tuberculosis</i> whole genome sequencing data to
+				to analyse <i>Mycobacterial</i> whole genome sequencing data to
 				predict lineage and drug resistance. Follow the instructions below to
 				upload a new sample or view analysed runs.
 			</div>
@@ -94,22 +94,21 @@
 
 			<h5 class="pt-4">Which mutations are being used to prodict resistance?</h5>
 			<div class="pb-4">
-				Resistance is predicted using the curated <a href="https://github.com/jodyphelan/tbdb">tbdb database</a>.
-				This database has been tested using over 17,000 samples with genotypic and
-				phenotypic data. You can read more about the markers present in the library
-				at the time of testing <a href="https://genomemedicine.biomedcentral.com/articles/10.1186/s13073-019-0650-x">here</a> or you can take a look at the
-				up to date CSV file <a href="https://github.com/jodyphelan/tbdb/blob/master/tbdb.csv">here</a>.
+				Resistance markers have been retreived from the literature.
+				You can take a look at the
+				up to date CSV files <a href="https://github.com/ntm-db/ntm-db/tree/master/db">here</a> by navigating to the
+				relevant species folder and viewing the <code>variants.csv</code> file.
 			</div>
 
 
 
 			<h5 class="pt-4">Can I run NTM-Profiler on my own computer?</h5>
 			<div class="pb-4">
-				If you have access to a linux or osX operating system then you can download
+				If you have access to a linux or macOS operating system then you can download
 				the commandline version of NTM-Profiler. For more information on this please
-				visit the	<a href="https://github.com/jodyphelan/TBProfiler/">github repository</a>.
+				visit the	<a href="https://github.com/jodyphelan/ntm-profiler/">github repository</a>.
 				If you would like to create your own instance of this webserver, the code
-				is fully open-source and available at this <a href="https://github.com/jodyphelan/NTM-Profiler-webserver/">github repository</a>
+				is fully open-source and available at this <a href="https://github.com/jodyphelan/ntm-profiler-webserver/">github repository</a>
 			</div>
 
 			<h5 class="pt-4">Give feedback or request a feature</h5>
@@ -117,20 +116,14 @@
 				We are always looking to improve NTM-Profiler. If you see some results that
 				don't look right or would like to see some additional functionality in the
 				future, don't hesitate to get in touch via the
-				<a href="https://github.com/jodyphelan/NTM-Profiler-webserver/issues"></a>
+				<a href="https://github.com/jodyphelan/ntm-profiler-webserver/issues"></a>
 				section on our github page.
 			</div>
 
 			<h5 class="pt-4">Citation</h5>
 			<div class="pb-4">
-				Phelan, J. E. et al. Integrating informatics tools and portable sequencing
-				technology for rapid detection of resistance to anti-tuberculous drugs.
-				Genome Med. 11, 41 (2019).
+				Please cite this website if you use it in your research.
 			</div>
-            <div class="pb-4">
-                Coll F, et al. Rapid determination of anti-tuberculosis drug resistance
-                from whole-genome sequences. Genome Medicine 7: 51 (2015).
-            </div>
 
 
 			<hr>
