--- a/src/ntm_profiler_webserver/templates/pages/upload.html
+++ b/src/ntm_profiler_webserver/templates/pages/upload.html
@@ -20,7 +20,7 @@
 <div class="row justify-content-center">
   <div class="col-md-10 p-4">
     <div class="pt-4 pb-4">
-      Upload your next generation sequencing data in <b>fastQ</b> format. Files will
+      Upload your next generation sequencing data in <b>fastq</b> or <b>fasta</b> format. Files will
       be processed using the NTM-Profiler pipeline with default parameters. You may
       select the technology used to generate the data (Illumina or Oxford Nanopore).
       Samples will be process with a first in first out policy so please be patient
@@ -32,7 +32,7 @@
       If you have files which are larger or you require many	isolates to be processed
       and have access to a linux or macOS operating system then	it might be worthwhile
       to run the commandline version of NTM-Profiler. For more information on this please visit the
-      <a href="https://github.com/jodyphelan/TBProfiler/">github repository</a>.
+      <a href="https://github.com/jodyphelan/ntm-profiler/">github repository</a>.
     </div>
   </div>
 </div>
