--- a/src/ntm_profiler_webserver/templates/macros.html
+++ b/src/ntm_profiler_webserver/templates/macros.html
@@ -23,6 +23,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
+{% macro status_spans(status) -%}
+    {% if status == 'QUEUED' %}
+        <span class="badge bg-warning">Queued</span>
+    {% elif status == 'PROCESSING' %}
+        <span class="badge bg-info">Processing</span>
+    {% elif status == 'DONE' %}
+        <span class="badge bg-success">Completed</span>
+    {% elif status == 'FAILED' %}
+        <span class="badge bg-danger">Failed</span>
+    {% else %}
+        <span class="badge bg-secondary">{{status}}</span>
+
+    {% endif %}
+
+{%- endmacro %}
+
 
 {% macro igv(reference,gff,run_id) -%}
 
@@ -190,6 +206,21 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="collapse pt-4" id="fasta_options_collapse">
+                    <h5>File suffix:</h5>
+                    <div class="mb-2">
+                        Read suffix. Use this option to change the default suffix of files.
+                        For example if your fastq file is named <b>sample1.fna</b>	 then your
+                        suffix should be <b>.fna</b>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div>File suffix:</div>
+                            <div><input type="text" name="fasta-suffix" id="forward-suffix-input" placeholder=".fasta"></div>
+                        </div>
+                    </div>
+                </div>
                 
                 <hr> 
                 <div class="pt-2 justify-content-center text-center">
@@ -254,6 +285,17 @@
                     $('#paried_fastq_options_collapse').collapse('show');
                 }else{
                     $('#paried_fastq_options_collapse').collapse('hide');
+                }
+            });
+
+            if($('input[name="radio_filetype"]:checked').val() == 'fasta'){
+                $('#fasta_options_collapse').collapse('show');
+            }
+            $('input[name="radio_filetype"]').change(function(){
+                if($(this).val() == 'fasta'){
+                    $('#fasta_options_collapse').collapse('show');
+                }else{
+                    $('#fasta_options_collapse').collapse('hide');
                 }
             });
         });
@@ -539,15 +581,7 @@
     <div class="card shadow">
         <div class="card-header text-center ">
             {{name}}
-            {% if name == "Resistance report" %}
-            <abbr title="Table indicating areas of resistance and what drug is affected"><i class="fa-solid fa-question" title=""></i></abbr>
-            {% endif %}
-            {% if name == "Other variants" %}
-            <abbr title="Table indicating areas where other changes occured not to do with drug resistance"><i class="fa-solid fa-question" title=""></i></abbr>
-            {% endif %}
-            {% if name == "Missing positions report" %}
-            <abbr title="Table indicating positions missing from the genome"><i class="fa-solid fa-question" title=""></i></abbr>
-            {% endif %}
+            
         </div>
         <div class="card-body">
             <table class="table table-hover" id="table-{{rand_id}}">
@@ -564,11 +598,17 @@
                     {% for row in rows %}
                         <tr>
                         {% for key in columns %}
-                        {% if key != 'Genotypic Resistance' %}
+                            {% if key == 'status' %}
+                                <td>
+                                    {{ status_spans(row[key]) }}
+                                </td>
+                
+                            {% else %}
                             <td>
                                 {{ row[key]|safe }}
                             </td>
                             {% endif %}
+
                         {% endfor %}
                         </tr>
                         
