--- a/src/ntm_profiler_webserver/templates/pages/species-result.html
+++ b/src/ntm_profiler_webserver/templates/pages/species-result.html
@@ -32,13 +32,81 @@
                         <div>Species: {{ data['species'] }}</div>
                     </div>
                     <div class="tab-pane fade" id="qc-tab-pane" role="tabpanel" aria-labelledby="qc-tab" tabindex="0">
-                        <div>Number of reads: {{ results['qc']['num_sequences'] }}</div>
-                        <div>Number of bases: {{ results['qc']['num_bases'] }}</div>
+                        <!-- {{results['qc']}} -->
+                        <h4>Quality control</h4>
+                        {% if 'percent_reads_mapped' in results['qc'] %}
+                            <div>
+                                The quality control metrics are calculated using the reads mapped to the reference genome.
+                            </div>
+                            <h4>Overview</h4>
+
+
+                            <!-- create table -->
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Metric</th>
+                                        <th scope="col">Value</th>
+                                        <th scope="col">Description</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Number of reads mapped</td>
+                                        <td>{{ results['qc']['num_reads_mapped'] }}</td>
+                                        <td>Number of reads mapped to the reference genome</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Percent of reads mapped</td>
+                                        <td>{{ results['qc']['percent_reads_mapped'] }}</td>
+                                        <td>Percentage of reads mapped to the reference genome</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Median depth</td>
+                                        <td>{{ results['qc']['target_median_depth'] }}</td>
+                                        <td>Median depth of the target regions</td>
+                                </tbody>
+                            </table>
+
+
+                            
+                        {% else %}       
+                            <div>
+                                The quality control metrics are calculated using the input reads if you have uploaded fastq files
+                                or input contigs if you have uploaded a fasta file. If you have uploaded a fasta file the number 
+                                of bases should be roughly equal to the genome size for a good assembly.
+                            </div>             
+                            <!-- create table -->
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Metric</th>
+                                        <th scope="col">Value</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Number of reads</td>
+                                        <td>{{ results['qc']['num_sequences'] }}</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Number of bases</td>
+                                        <td>{{ results['qc']['num_bases'] }}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        {% endif %}
                     </div>
                     <div class="tab-pane fade" id="species-tab-pane" role="tabpanel" aria-labelledby="species-tab" tabindex="0">
                         
+                        <h4>Species found</h4>
+                        <div>
+                            Species assignment is performed using a kmer-based approach using the taxonomy
+                            as defined by GTDB. The closest match in the database is shown along with the average nucleotide identity (ANI).
+                            The relative abundance is calculated by normalising the abundance of species-specific kmers found.
+                        </div>
                         <!-- bootstrap table -->
-                        <table id="species_table" class="table table-striped table-bordered" style="width:100%">
+                        <table id="species_table" class="table" style="width:100%">
                             <thead>
                                 <tr>
                                     <th>Species</th>
