--- a/src/ntm_profiler_webserver/templates/pages/analysis_id.html
+++ b/src/ntm_profiler_webserver/templates/pages/analysis_id.html
@@ -4,6 +4,13 @@
 {% endblock %}
 {% block content %}
 <div class="row justify-content-center">
+  <div class="col-md-8 p-4">
+    Below are the details of your runs. You can click on the run ID to view the results.
+    Make sure to bookmark this page so that you can return to it later.
+  </div>
+</div>
+<div class="row justify-content-center">
+    
     <div class="col-md-8">
 
       {{ macros.generic_table(runs,{'link':'Run ID', 'files':'Files', 'status':'Status'},"Submitted runs",True) }}
