--- a/src/ntm_profiler_webserver/templates/pages/full-result.html
+++ b/src/ntm_profiler_webserver/templates/pages/full-result.html
@@ -190,6 +190,11 @@
                         <h4>
                             Overview
                         </h4>
+                        <div>
+                            The drug resistance analysis is performed using the genome variants found in the sample.
+                            The resistance is determined by the presence of known resistance mutations and genes in the genome.
+                            This table shows the resistance to the drugs tested and the supporting genetic determinants.
+                        </div>
                         <table class="table">
                             <thead>
                               <tr>
@@ -225,6 +230,9 @@
                         <h5>
                             Drug resistance genes
                         </h5>
+                        <div>
+                            The following table lists resistance-associated genes found in your sample.
+                        </div>
 
 
                         <table class="table">
@@ -253,6 +261,9 @@
                         <h5>
                             Drug resistance variants
                         </h5>
+                        <div>
+                            The following table lists resistance-associated variants found in your sample.
+                        </div>
                         
 
                         <table class="table">
@@ -287,6 +298,9 @@
                         <h5>
                             Other variants
                         </h5>
+                        <div>
+                            The following table lists variants that are not resistance-associated but are found in candidate genes.
+                        </div>
 
                         <table class="table">
                             <thead>
